plugins {
    id 'java'
    id 'idea'
    id 'maven-publish'
}

group = 'chengweiou.universe'
version = '0.0.51'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

publishing {
    publications {
        gpr(MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = uri('https://maven.pkg.github.com/chengweiou/blackhole')
            credentials {
                username = project.findProperty('gpr.user') ?: System.getenv('USERNAME')
                password = project.findProperty('gpr.key') ?: System.getenv('TOKEN')
            }
        }
    }
}
